--- a/.env
+++ b/.env
@@ -13,6 +13,9 @@
 #
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
+#MOVIES_PER_PAGE=10
+COMPOSER_PATH="%kernel.project_dir%/composer.json"
+OMDB_API_KEY=xxxxx
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
@@ -27,7 +30,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/data/main.db"
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/main.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
