--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 #MOVIES_PER_PAGE=10
 COMPOSER_PATH="%kernel.project_dir%/composer.json"
 OMDB_API_KEY=xxxxx
+ADMIN_PASSWORD=xxxxxxxxxx
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
